--- a/static/hemeroteca/css/style.css
+++ b/static/hemeroteca/css/style.css
@@ -1,119 +1,58 @@
+@import url(/static/hemeroteca/css/elements/anchor.css);
+@import url(/static/hemeroteca/css/elements/heading.css);
+
+@import url(/static/hemeroteca/css/parts/header.css);
+
+@import url(/static/hemeroteca/css/components/navigation.css);
+@import url(/static/hemeroteca/css/components/form.css);
+@import url(/static/hemeroteca/css/components/data-table.css);
+@import url(/static/hemeroteca/css/components/page.css);
+
+:root {
+  --oh-main--width: 920px;
+  --oh-main--padding: 5vw;
+  --oh-color--primary: #75b78e;
+  --oh-color--secondary: #ffffff;
+  --oh-color--text: #333333;
+  --oh-color--link: #4452df;
+  --oh-line-height: 1.6;
+  --oh-line-height--l: 1.9;
+  --oh-line-height--s: 1.2;
+  --oh-line-height--xs: 1;
+  --oh-font-size: 16px;
+  --oh-font-size--xl: 36px;
+  --oh-font-size--l: 24px;
+  --oh-font-size--s: 12px;
+  --rpv-core__inner-page-background-color: #f1f1f1;
+}
+
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 16px;
-  line-height: 1.6;
-  color: #333;
+  font-size: var(--oh-font-size);
+  line-height: var(--oh-line-height);
+  color: var(--oh-text-color);
   margin: 0;
   padding: 0;
+  width: 100vw;
 }
 
-.site-header {
-  padding-top: 2rem;
-  background-color: #75b78e;
-  color: white;
-}
-
-.site-header > div {
-  max-width: 760px;
-  margin: auto;
-}
-
-.site-title {
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.site-navigation ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.site-navigation a,
-.site-navigation a:visited,
-.site-navigation a:hover {
-  color: white;
-  text-decoration: none;
-}
-
-.site-navigation ul li {
-  border-bottom: 2px solid transparent;
-}
-.site-navigation ul li:hover {
-  border-bottom: 2px solid black;
-}
-
-.site-navigation ul li {
-  padding: 0 0.5rem;
-}
-
-.site-navigation ul li:first-child {
-  margin-left: -0.5rem;
+.site-wrapper {
+  overflow: hidden;
+  width: 100%;
 }
 
 .site-content {
-  max-width: 760px;
+  max-width: var(--oh-main--width);
   margin: auto;
+  padding: 0 var(--oh-main--padding);
   padding-top: 5rem;
   margin-bottom: 5rem;
 }
 
-#document {
-  height: 920px;
-}
-
-form {
-  display: block;
-}
-
-form .field {
-  display: block;
-  margin: 1rem 0;
-}
-
-form .field label,
-form .field select,
-form .field input {
-  display: block;
-  width: 100%;
-}
-
-form .field select,
-form .field input {
-  padding: 0.25rem 0.65rem;
-  border: none;
-  box-shadow: 0px 0px 2px #0008;
-  border-radius: 5px;
-  color: #444;
-}
-
-form .field input {
-  width: calc(100% - 1.3rem);
-}
-
-form .field input[type="submit"] {
-  cursor: pointer;
-  width: 100%;
-}
-
-form .field input[type="submit"]:hover {
-  background-color: #75b78e;
-  color: white;
-}
-
-a {
-  color: #333;
-  text-decoration: none;
-}
-
-a:visited,
-a:focus {
-  color: #333;
-}
-
-a:hover {
-  text-decoration: underline;
+@media (max-width: 920px) {
+  .site-content {
+    padding-top: 2rem;
+  }
 }
 
 .publication-cover {
