--- a/templates/hemeroteca/articles.html
+++ b/templates/hemeroteca/articles.html
@@ -1,6 +1,10 @@
 {% extends 'hemeroteca/wrapper.html' %}
 {% load static %}
 
+{% block head %}
+<link rel="stylesheet" href="/static/hemeroteca/css/pages/articles.css" />
+{% endblock %}
+
 {% block content %}
 <h1>Articles</h1>
 <table id="articles" class="compact hover stripe">
@@ -8,9 +12,8 @@
     <tr>
       <th>Títol</th>
       <th>Firma</th>
-      <th>Número</th>
-      <th>Data</th>
       <th>Secció</th>
+      <th>Núm.</th>
     </tr>
   </thead>
   <tbody>
