feat: settings context

--- a/templates/hemeroteca/wrapper.html
+++ b/templates/hemeroteca/wrapper.html
@@ -3,10 +3,13 @@
 <html lang="ca">
   <head>
     {% block title %}
-    <title>La Vall de Vidre | Arxiu</title>
+    <title>{{ site_title }} | Hemeroteca Digital</title>
     {% endblock %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <meta name="description" content="{{ site_description }}" />
+    <meta name="generator" content="django" />
 
     {% block head %}{% endblock %}
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
@@ -22,7 +25,7 @@
       <div class="site-header-inner">
         <div class="site-title">
           <p>Hemeroteca digital</p>
-          <h1><a href="/">La Vall de Vidre</a></h1>
+          <h1><a href="/">{{ site_title }}</a></h1>
         </div>
       <nav class="site-navigation">
         <div class="burger">
