--- a/templates/hemeroteca/article.html
+++ b/templates/hemeroteca/article.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block head %}
-<script src="/static/hemeroteca/js/pdf-reader/build/static/js/main.js"></script>
-<link rel="stylesheet" href="/static/hemeroteca/js/pdf-reader/build/static/css/main.css" />
+<script src="{% static 'hemeroteca/js/pdf-reader/build/static/js/main.js' %}"></script>
+<link rel="stylesheet" href="{% static 'hemeroteca/js/pdf-reader/build/static/css/main.css' %}" />
 <link rel="stylesheet" href="{% static 'hemeroteca/css/style.css' %}" />
 <link rel="stylesheet" href="{% static 'hemeroteca/css/components/reader.css' %}" />
 {% endblock %}
