--- a/templates/hemeroteca/articles.html
+++ b/templates/hemeroteca/articles.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" href="/static/hemeroteca/css/pages/articles.css" />
+<link rel="stylesheet" href="{% static 'hemeroteca/css/pages/articles.css' %}" />
 {% endblock %}
 
 {% block content %}
