--- a/templates/hemeroteca/articles_table.html
+++ b/templates/hemeroteca/articles_table.html
@@ -30,5 +30,5 @@
 
 {% block footer %}
 <script src="{% static 'hemeroteca/js/articles.table.js' %}" async></script>
-<link rel="stylesheet" href="/static/hemeroteca/css/components/articles-table.css" />
+<link rel="stylesheet" href="{% static 'hemeroteca/css/components/articles-table.css' %}" />
 {% endblock %}
