--- a/templates/hemeroteca/section.html
+++ b/templates/hemeroteca/section.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-<link href="/static/hemeroteca/css/pages/section.css" rel="stylesheet" />
+<link href="{% static 'hemeroteca/css/pages/section.css' %}" rel="stylesheet" />
 {% endblock %}
 
 {% block content %}
