--- a/templates/hemeroteca/wrapper.html
+++ b/templates/hemeroteca/wrapper.html
@@ -17,7 +17,7 @@
     <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
 
     <link rel="stylesheet" href="{% static 'hemeroteca/css/style.css' %}" />
-    <script src="/static/hemeroteca/js/navigation.js"></script>
+    <script src="{% static 'hemeroteca/js/navigation.js' %}"></script>
   </head>
   <body>
     <div class="site-wrapper">
