--- a/templates/hemeroteca/wrapper.html
+++ b/templates/hemeroteca/wrapper.html
@@ -25,7 +25,7 @@
       <div class="site-header-inner">
         <div class="site-title">
           <p>Hemeroteca digital</p>
-          <h1><a href="/">{{ site_title }}</a></h1>
+          <h1><a href="{{ site_base_url }}">{{ site_title }}</a></h1>
         </div>
       <nav class="site-navigation">
         <div class="burger">
